Fix code review issues for REST Catalog Metrics Table Persistence
- Issue 1: Use parameterized query placeholder for LIMIT instead of string concatenation
- Issue 4: Fix thread-safety by creating request-scoped JdbcMetricsPersistence instances
  instead of storing mutable state on shared JdbcBasePersistenceImpl
- Issue 5: Add DEBUG logging when metrics are dropped due to missing datasource
- Issue 6: Replace Java 21 getLast() with get(size-1) for compatibility
- Issue 7: Fix CHANGELOG typo (polaris.persistence.metrics.type)

Also removes duplicate MetricsPersistence implementation from JdbcBasePersistenceImpl,
consolidating all metrics persistence logic in JdbcMetricsPersistence.